style: resolve overlapping issue between recipe cards and headers during hover

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -476,7 +476,7 @@ html, body {
     display: flex;       
     overflow-x: auto;    
     gap: 20px;           
-    padding: 0 0 15px 0;     
+    padding: 7px 0 15px 0;     
     scroll-snap-type: x mandatory; 
 }
 
